--- a/styles.css
+++ b/styles.css
@@ -3,25 +3,32 @@ html {
   height: 100%;
 }
 body {
-  background: #FAFAFA;
-  color: #010101;
+  background: #fafafa;
+  color: #101010;
   font-size: 16px; font-size: 1.6rem;
   font-family: "Titillium Web", sans-serif;
   line-height: 1.5;
 }
 #wrapper {
   width: 1000px;
-  margin: 1em auto;
+  margin: 1.5em auto;
   height: 100%;
   text-align: center;
   max-width: 100%;
 }
-.current-fonts {
+table tr td {
+  width: 33.3%;
+  padding: 0 1em;
+}
+table tr td button {
+  width: 100%;
+}
+#current-fonts {
   padding: 1em;
   background: #eee;
   border-radius: 4px;
-  box-shadow: 0 1px 2px #ddd inset;
-  margin: 1em;
+  box-shadow: 0 1px 2px #ccc inset;
+  margin: 1em 0;
 }
 b {
   font-weight: bold;
