--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+@media (min-width: 30em) {
+  .row { width: 100%; display: table; table-layout: fixed; }
+  .col { display: table-cell; }
+}
+.row { border-spacing: 10px 0; }
+
 html {
   font-size: 62.5%;
   height: 100%;
@@ -20,7 +26,7 @@ table tr td {
   width: 33.3%;
   padding: 0 1em;
 }
-table tr td button {
+button {
   width: 100%;
 }
 #current-fonts {
