--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,10 @@ body {
   text-align: center;
   max-width: 100%;
 }
+textarea {
+  max-width: 100%;
+  max-height: 30em;
+}
 table tr td {
   width: 33.3%;
   padding: 0 1em;
